load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = [
        "constraint.go",
        "resolver.go",
        "semver.go",
    ],
    importpath = "martianoff/gala/internal/depman/version",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "version_test",
    srcs = ["version_test.go"],
    embed = [":version"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
